--- a/mc-build/.github/workflows/lint.yml
+++ b/mc-build/.github/workflows/lint.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
   workflow_dispatch:
 
+env:
+  VERSION: '1.19'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -49,7 +52,7 @@ jobs:
         with:
           version: "0.62.0"
           source: .
-          minecraft: "1.19"
+          minecraft: ${{ env.VERSION }}
           stats: true
 
   json:
