--- a/mc-build/.github/workflows/release.yml
+++ b/mc-build/.github/workflows/release.yml
@@ -9,6 +9,10 @@ on:
 permissions:
   contents: write
 
+env:
+  NAME: ''
+  MODRINTH_ID: ''
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,8 +42,8 @@ jobs:
           name: datapack-raw
       - name: Finish datapack
         run: |
-          mv pack.zip <name>.zip
-          zip -u <name>.zip LICENSE.txt README.md CHANGELOG.md
+          mv pack.zip ${{ env.NAME }}.zip
+          zip -u ${{ env.NAME }}.zip LICENSE.txt README.md CHANGELOG.md
 
       - name: Squash resourcepack
         uses: ComunidadAylas/PackSquash-action@v3
@@ -52,8 +56,8 @@ jobs:
           name: resourcepack-raw
       - name: Finish resourcepack
         run: |
-          mv pack.zip <name>.zip
-          zip -u <name>-Resourcepack.zip LICENSE.txt README.md CHANGELOG.md
+          mv pack.zip ${{ env.NAME }}.zip
+          zip -u ${{ env.NAME }}-Resourcepack.zip LICENSE.txt README.md CHANGELOG.md
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -61,8 +65,8 @@ jobs:
           name: artifact
           path: |
             CHANGELOG.md
-            <name>.zip
-            <name>-Resourcepack.zip
+            ${{ env.NAME }}.zip
+            ${{ env.NAME }}-Resourcepack.zip
 
   release-github:
     runs-on: ubuntu-latest
@@ -77,11 +81,11 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          name: <name> ${{github.ref_name}}
+          name: ${{ env.NAME }} ${{github.ref_name}}
           body_path: CHANGELOG.md
           files: |
-            <name>.zip
-            <name>-Resourcepack.zip
+            ${{ env.NAME }}.zip
+            ${{ env.NAME }}-Resourcepack.zip
 
   release-modrinth:
     runs-on: ubuntu-latest
@@ -96,11 +100,11 @@ jobs:
       - name: Publish on Modrinth
         uses: Kir-Antipov/mc-publish@v3.2
         with:
-          modrinth-id: <id>
+          modrinth-id: ${{ env.MODRINTH_ID }}
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-          name: <name> ${{github.ref_name}}
-          files-primary: <name>.zip
-          files-secondary: <name>-Resourcepack.zip
+          name: ${{ env.NAME }} ${{github.ref_name}}
+          files-primary: ${{ env.NAME }}.zip
+          files-secondary: ${{ env.NAME }}-Resourcepack.zip
           version: ${{github.ref_name}}
           version-type: release
           changelog-file: CHANGELOG.md
