--- a/mc-build/.github/workflows/lint.yml
+++ b/mc-build/.github/workflows/lint.yml
@@ -3,8 +3,8 @@ name: Lint
 on:
   push:
       paths:
-        - "**.mc"
-        - "config.json"
+        - '**.mc'
+        - 'config.json'
   pull_request:
   workflow_dispatch:
 
@@ -50,7 +50,7 @@ jobs:
       - name: Check minecraft commands
         uses: mcbeet/check-commands@v1
         with:
-          version: "0.62.0"
+          version: '0.62.0'
           source: .
           minecraft: ${{ env.VERSION }}
           stats: true
@@ -71,4 +71,4 @@ jobs:
       - name: Install jsonlint
         run: npm install -g jsonlint
       - name: Lint json files
-        run: for file in $(find . -name "*.json"); do jsonlint $file -c; done
+        run: for file in $(find . -name '*.json'); do jsonlint $file -c; done
