fix(ci): lint action is executed on release

--- a/beet/.github/workflows/lint.yml
+++ b/beet/.github/workflows/lint.yml
@@ -6,6 +6,8 @@ on:
       - '**.bolt'
       - '**.json'
       - 'beet.yaml'
+    tags-ignore:
+      - 'v*.*.*'
   pull_request:
   workflow_dispatch:
 
