feat(beet): proper resourcepack support

--- a/beet/beet.yaml
+++ b/beet/beet.yaml
@@ -11,7 +11,16 @@ data_pack:
   name: ""
   description: "v0.1.0"
   load:
-    - "src"
+    - data: "src"
+    - pack.png: "pack.png"
+
+
+resource_pack:
+  name:  "-Resourcepack"
+  pack_format: 13
+  load:
+    - assets: "assets"
+    - pack.png: "pack.png"
 
 pipeline:
   - beet.contrib.rename_files
